
  [ Antti-Juhani Kaijanaho ]
  * tbl-dctrl: Fix field line length detection for multi-line fields
    - Reported by Gerfried Fuchs <rhonda@debian.at> out of band.
  * tbl-dctrl (linewrap): Force a line break where the field has one.
  * Update FSF address in license blurbs all over the source tree.
  * debian/copyright: Update copyright years
  * Merge 2.14.1
  
  [ Cyril Brulebois ]
  * Add Build-Depends/Build-Depends-Indep search example (closes: #339380)

 -- Antti-Juhani Kaijanaho <ajk@debian.org>  Sat, 28 Aug 2010 09:38:24 +0300

dctrl-tools (2.14.1) unstable; urgency=low

  [ Antti-Juhani Kaijanaho ]
  * grep-dctrl: Make a help string more comprehensible
  * po/fi.po: Updated translation.
  * Further Russian translation update from Yuri Kozlov (closes: #593240)
  * French translation updated by David Prévot (closes: #593990)
  * Standards-Version updated to 3.9.1 with no packaging changes.
  
  [ Gerfried Fuchs ]
  * Russian translation updated by Yuri Kozlov (closes: #513026)
  * German translation updated by myself.

 -- Antti-Juhani Kaijanaho <ajk@debian.org>  Mon, 23 Aug 2010 21:08:39 +0300

dctrl-tools (2.14) unstable; urgency=low

  [ Antti-Juhani Kaijanaho ]
  * Merge  2.13.1.
  * Update standards-version to 3.8.3.  No related changes.
  * grep-dctrl/rc.c, lib/msg.c: Recode to UTF-8
  * lib/msg.c: Remove (obsolete) snail mail and email addresses for me.
  * */*.[ch]: Use the copyright symbol instead of (c) or (C).
  * msg.[ch] (and others): allow the message functions to handle format strings
  * tbl-dctrl.c [linewrap]: Clarify.
  * tbl-dctrl.c [linewrap]: Do not include the breakpoint in the next line.
    Closes: #508953 (when greping through source packages, 
                     tbl-control can't list Files
    Reported by Gerfried Fuchs <rhonda@debian.at>.
  * tests/bug506138.{sh,out}: New test case.
  * grep-dctrl.c [apptok]: Forbid mixing the predicate and input files.
    It never worked, anyway.