@@ -1,0 +1,2 @@
+../grep-dctrl/grep-dctrl: -:3: expected a colon
+.
