@@ -1,0 +1,2 @@
+../grep-dctrl/grep-dctrl: -:5: expected a colon
+.
