@@ -7,11 +7,12 @@ dctrl-tools (2.15) UNRELEASED; urgency=low
   * Update FSF address in license blurbs all over the source tree.
   * debian/copyright: Update copyright years
   * Merge 2.14.1
+  * lib/paragraph.c (para_parse_next): Fix line counting.
   
   [ Cyril Brulebois ]
   * Add Build-Depends/Build-Depends-Indep search example (closes: #339380)
 
- -- Antti-Juhani Kaijanaho <ajk@debian.org>  Sat, 28 Aug 2010 09:38:24 +0300
+ -- Antti-Juhani Kaijanaho <ajk@debian.org>  Sat, 28 Aug 2010 20:20:50 +0300
 
 dctrl-tools (2.14.1) unstable; urgency=low
 
